https://github.com/crowlogic/arb4j/issues/472